conteneurisation/partie 2/Backend-manifeste.yaml
#Service

apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: exam
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      
  
  
---


#Deployment


apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployement
  namespace: exam
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: medhj/backend_img:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
