conteneurisation/partie 2/Frontend-manifeste.yaml
#Service

apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: exam
spec:
  selector:
    app: frontend
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80

  
---

#Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: exam
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: medhj/frontend_img:latest
          ports:
            - containerPort: 80
          resources: {}
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          startupProbe:
            tcpSocket:
                port: 80
            periodSeconds: 10
            failureThreshold: 3
