conteneurisation/partie 2/Ingress-manifeste.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conteneurisation-projet
  namespace: exam
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: conteneurisation.com
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service: 
              name: frontend
              port: 
                number: 80
